# Federated-learning-

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  TECH_STACK.md  docker-compose.yml
client-portal/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client-portal/src/: App.tsx  index.css
clients/: Dockerfile  client.py  docker-compose.yml  pyproject.toml
clients/app/: comms.py  config.py  data.py  trainer.py
clients/config/: client_config.yaml
clients/data/client-1/: dataset.csv
clients/data/client-2/: dataset.csv
clients/data/client-3/: dataset.csv
controller/: Dockerfile  docker-compose.yml  requirements.txt
controller/app/: db.py  experiments.db  main.py  state.py
core/: docker-compose.yml
core/config/: config.yaml
core/server/: Dockerfile  pyproject.toml
core/server/app/: aggregation.py  config.py  main.py  schemas.py  state.py
core/server/app/routes/: __init__.py  control.py  federation.py
core/shared/: __init__.py  model.py
dashboard/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/public/: modele-produits-alqaffa.xlsx
dashboard/src/: App.tsx  index.css  main.tsx
fl/: debug_train.py  requirements.txt
fl/client/: data.py  finetune.py  kafka_publisher.py  main.py  privacy.py  trainer.py
fl/output/: best_model.pt  global_model.pt  (+2 more)
scripts/: generate_data.py  generate_email_data.py
worker/: Dockerfile  aggregator.py  hdfs_client.py  main.py  producer.py  requirements.txt  router.py
(+116 files in other folders)
